load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "filefmt.go",
        "qemu.go",
        "transport.go",
        "validate.go",
    ],
    importpath = "kubevirt.io/containerized-data-importer/pkg/image",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/system:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/containers/image/v5/docker:go_default_library",
        "//vendor/github.com/containers/image/v5/image:go_default_library",
        "//vendor/github.com/containers/image/v5/oci/archive:go_default_library",
        "//vendor/github.com/containers/image/v5/pkg/blobinfocache:go_default_library",
        "//vendor/github.com/containers/image/v5/types:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_model/go:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/klog:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filefmt_test.go",
        "qemu_suite_test.go",
        "qemu_test.go",
        "transport_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/system:go_default_library",
        "//tests/reporters:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_model/go:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)
