load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "directio.go",
        "filefmt.go",
        "nbdkit.go",
        "qemu.go",
        "validate.go",
    ],
    importpath = "kubevirt.io/containerized-data-importer/pkg/image",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/monitoring/metrics/cdi-cloner:go_default_library",
        "//pkg/system:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/docker/go-units:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "filefmt_test.go",
        "qemu_suite_test.go",
        "qemu_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/monitoring/metrics/cdi-cloner:go_default_library",
        "//pkg/system:go_default_library",
        "//vendor/github.com/onsi/ginkgo/v2:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)
