load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "data-processor.go",
        "format-readers.go",
        "http-datasource.go",
        "imageio-datasource.go",
        "registry-datasource.go",
        "s3-datasource.go",
        "transport.go",
        "upload-datasource.go",
        "util.go",
        "vddk-datasource.go",
    ],
    importpath = "kubevirt.io/containerized-data-importer/pkg/importer",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/core/v1beta1:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/image:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/prometheus:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/containers/image/v5/docker:go_default_library",
        "//vendor/github.com/containers/image/v5/image:go_default_library",
        "//vendor/github.com/containers/image/v5/oci/archive:go_default_library",
        "//vendor/github.com/containers/image/v5/pkg/blobinfocache:go_default_library",
        "//vendor/github.com/containers/image/v5/types:go_default_library",
        "//vendor/github.com/mrnold/go-libnbd:go_default_library",
        "//vendor/github.com/ovirt/go-ovirt:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/prometheus/client_model/go:go_default_library",
        "//vendor/github.com/ulikunitz/xz:go_default_library",
        "//vendor/github.com/vmware/govmomi:go_default_library",
        "//vendor/github.com/vmware/govmomi/find:go_default_library",
        "//vendor/github.com/vmware/govmomi/object:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25/mo:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25/types:go_default_library",
        "//vendor/golang.org/x/sys/unix:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "data-processor_test.go",
        "format-readers_test.go",
        "http-datasource_test.go",
        "imageio-datasource_test.go",
        "importer_suite_test.go",
        "registry-datasource_test.go",
        "s3-datasource_test.go",
        "transport_test.go",
        "upload-datasource_test.go",
        "util_test.go",
        "vddk-datasource_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/apis/core/v1beta1:go_default_library",
        "//pkg/common:go_default_library",
        "//pkg/image:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/cert:go_default_library",
        "//pkg/util/cert/triple:go_default_library",
        "//tests/reporters:go_default_library",
        "//tests/utils:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/s3:go_default_library",
        "//vendor/github.com/mrnold/go-libnbd:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
        "//vendor/github.com/ovirt/go-ovirt:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25/mo:go_default_library",
        "//vendor/github.com/vmware/govmomi/vim25/types:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/resource:go_default_library",
    ],
)
