load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["uploadserver.go"],
    importpath = "kubevirt.io/containerized-data-importer/pkg/uploadserver",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/importer:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/golang/snappy:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/k8s.io/klog/v2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "uploadserver_suite_test.go",
        "uploadserver_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//pkg/common:go_default_library",
        "//pkg/importer:go_default_library",
        "//pkg/util/cert:go_default_library",
        "//pkg/util/cert/triple:go_default_library",
        "//tests/reporters:go_default_library",
        "//vendor/github.com/onsi/ginkgo:go_default_library",
        "//vendor/github.com/onsi/ginkgo/extensions/table:go_default_library",
        "//vendor/github.com/onsi/gomega:go_default_library",
    ],
)
